--- a/recipes/RAG/RAG_with_Langchain.ipynb
+++ b/recipes/RAG/RAG_with_Langchain.ipynb
@@ -1128,13 +1128,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "40UtYX0q2OKf",
-        "outputId": "082d04a0-8033-4472-f788-333a41987a75"
+        "outputId": "008625bd-94ca-42a2-c5b8-ae505ab0658b"
       },
       "outputs": [
         {
@@ -1336,7 +1336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {
         "id": "5XD_iXj72OKf"
       },
@@ -1391,7 +1391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 18,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -1403,14 +1403,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sni2aG_o2OKf",
-        "outputId": "eb4e6877-6d72-4f08-91d3-3fe6e898978a"
+        "outputId": "318205c3-de37-4948-831d-95e1c304f83d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The president nominated Circuit Court of Appeals Judge Ketanji Brown Jackson to serve on the United States Supreme Court, describing her as one of the nation's top legal minds and a consensus builder with support from a broad range of organizations, including the Fraternal Order of Police and former judges appointed by Democrats and Republicans.\n"
+            "The president nominated Ketanji Brown Jackson, a Circuit Court of Appeals Judge, to serve on the United States Supreme Court. He described her as one of the nation's top legal minds and a consensus builder, with support from a broad range of groups including the Fraternal Order of Police and former judges appointed by both Democrats and Republicans.\n"
           ]
         }
       ],
